# origin

./: .coveragerc  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CHANGELOG  CompMethodes.py  Demo.py  LICENSE  MANIFEST.in  README.rst  generateCatCal.py  mat2fits.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tests.yml
ORICAT/: CatTools.py  DrawAndToDraw.py  Oricat.py  interORICAT.py
docs/: Makefile  api.rst  conf.py  example.ipynb  index.rst  installation.rst  usage.rst
muse_origin/: Dico_3FWHM.fits  Dico_FWHM_2_12.fits  __init__.py  lib_origin.py  origin.py  source_creation.py  source_masks.py  source_update.py  steps.py  version.py
origin/: __init__.py  lib_origin.py  origin.py  source_creation.py  source_masks.py  steps.py  version.py
scripts/: Dico_FWHM_to_fits.py
tests/: segmap.fits  test_origin.py
