[metadata]
name = origin
description =
long_description = file: README.rst
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
# license = BSD 3-Clause License
# license_file = LICENSE
# classifiers =
#     Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    mpdaf
    tqdm
    joblib
    PyYAML
    photutils>=0.5

[options.extras_require]
docs = numpydoc; sphinx_rtd_theme; sphinx-automodapi

[options.package_data]
origin = Dico_FWHM_2_12.fits

[tool:pytest]
addopts = --doctest-glob='*.rst'
minversion = 3.7.0
testpaths = docs origin tests

[isort]
multi_line_output = 3
include_trailing_comma = True
known_third_party=numpy,scipy,astropy,mpdaf,joblib,matplotlib,photutils,yaml

[flake8]
max-line-length = 88
