[metadata]
name = muse-origin
description = Blind detection of faint emission line galaxies in MUSE datacubes
long_description = file: README.rst
url = https://github.com/musevlt/origin
author = Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
keywords = astronomy, astrophysics, science, muse, vlt
license = MIT License
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    mpdaf
    tqdm
    joblib
    PyYAML
    photutils>=0.5

[options.extras_require]
docs = numpydoc>=0.9; sphinx_rtd_theme; sphinx-automodapi; nbsphinx

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
addopts = --doctest-glob='*.rst'
minversion = 3.7.0
testpaths = docs muse_origin tests

[isort]
multi_line_output = 3
include_trailing_comma = True
known_third_party=numpy,scipy,astropy,mpdaf,joblib,matplotlib,photutils,yaml

[flake8]
max-line-length = 88
